Обновлён home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,10 @@
 <body>
     <form>
         <h1> Vice versa </h1>
-        <textarea cols="50" rows="10"></textarea>
-        <p><input type="button" name="reverse!" value="Reverse!"></p>
+        <textarea cols="50" rows="10" name="usertext"></textarea>
+        <br>
+        <br>
+        <input type="submit" name="reverse!" value="Reverse!">
     </form>
 </body>
 </html>
