--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <form>
-        <h1> Vice versa </h1>
+    <h1>Vice Versa</h1>
+    <form action="{% url 'reverse' %}">
         <textarea cols="50" rows="10" name="usertext"></textarea>
         <br>
         <br>
-        <input type="submit" name="reverse!" value="Reverse!">
+        <input type="submit" value="Reverse!">
     </form>
 </body>
 </html>
